# src/main/java/com/paypal/controller/SubscribeController.java
@@ -1,7 +1,5 @@
 package com.paypal.controller;
 
-import java.util.List;
-
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -13,7 +11,6 @@ import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import com.paypal.entity.Subscribe;
 import com.paypal.service.ISubscribeService;
 
 @CrossOrigin
@@ -25,15 +22,15 @@ public class SubscribeController {
 	@Autowired
 	private ISubscribeService subscribeService;
 			
-	@RequestMapping(value = "/all", method = RequestMethod.GET, produces = "application/json")
-	public ResponseEntity<List<Subscribe>> list(@RequestParam(name="processDate", required=true) String processDate) {
+	@RequestMapping(value = "/pricing", method = RequestMethod.GET, produces = "application/json")
+	public ResponseEntity<Double> list(@RequestParam(name="customerId", required=true) String customerId) {
 		logger.info("Get all Invoices");
-		List<Subscribe> subscribes = subscribeService.findSubscribes(processDate);
+		Double amount = subscribeService.pricing(customerId);
 		
-		if(subscribes != null) {
-			return new ResponseEntity<List<Subscribe>>(subscribes, HttpStatus.OK);
+		if(amount != null) {
+			return new ResponseEntity<Double>(amount, HttpStatus.OK);
 		}else {
-			return new ResponseEntity<List<Subscribe>>(HttpStatus.NOT_FOUND);
+			return new ResponseEntity<Double>(HttpStatus.NOT_FOUND);
 		}
 	}
 		
