# src/main/java/com/paypal/entity/PricingDetails.java
@@ -1,0 +1,52 @@
+package com.paypal.entity;
+
+public class PricingDetails {	
+	private Integer customerId;
+	private String firstName;
+	private String lastName;
+	private Double amount;
+	private Double remainingAmount;
+	
+	public PricingDetails(Integer customerId, String firstName, String lastName, Double amount,
+			Double remainingAmount) {
+		super();
+		this.customerId = customerId;
+		this.firstName = firstName;
+		this.lastName = lastName;
+		this.amount = amount;
+		this.remainingAmount = remainingAmount;
+	}
+	public Integer getCustomerId() {
+		return customerId;
+	}
+	public void setCustomerId(Integer customerId) {
+		this.customerId = customerId;
+	}
+	public String getFirstName() {
+		return firstName;
+	}
+	public void setFirstName(String firstName) {
+		this.firstName = firstName;
+	}
+	public String getLastName() {
+		return lastName;
+	}
+	public void setLastName(String lastName) {
+		this.lastName = lastName;
+	}
+	public Double getAmount() {
+		return amount;
+	}
+	public void setAmount(Double amount) {
+		this.amount = amount;
+	}
+	public Double getRemainingAmount() {
+		return remainingAmount;
+	}
+	public void setRemainingAmount(Double remainingAmount) {
+		this.remainingAmount = remainingAmount;
+	}
+	
+	
+	
+}
